--- a/team.css
+++ b/team.css
@@ -149,6 +149,7 @@
   width: 100%;
   height: 822px;
   display: flex;
+  overflow: hidden;
   position: relative;
   max-width: 1440px;
   align-items: center;
@@ -461,40 +462,48 @@
 }
  
 @media(max-width: 479px) {
+  .team-header1 {
+    overflow: hidden;
+  }
   .team-navbar {
-    width: 478px;
+    width: 476px;
     height: 85px;
     padding: var(--dl-space-space-unit);
+    overflow: hidden;
   }
   .team-image1 {
-    left: 16px;
-    bottom: 10px;
+    top: 22px;
+    left: 39px;
   }
   .team-mobile-menu {
     padding: 16px;
   }
   .team-hero {
     height: 1167px;
+    overflow: hidden;
   }
   .team-image2 {
-    top: 605px;
-    left: 71px;
+    top: 606px;
+    left: 50px;
     position: absolute;
   }
   .team-image3 {
-    top: 139px;
-    left: 73px;
+    top: 140px;
+    left: 52px;
     position: absolute;
   }
   .team-image4 {
-    top: 1096px;
-    left: 212px;
+    top: 1097px;
+    left: 191px;
     position: absolute;
   }
   .team-image5 {
-    top: 635px;
-    left: 216px;
+    top: 636px;
+    left: 195px;
     position: absolute;
+  }
+  .team-footer {
+    overflow: hidden;
   }
   .team-logo2 {
     top: 0px;
@@ -508,14 +517,14 @@
     position: absolute;
   }
   .team-header2 {
-    top: 1028px;
-    left: 73px;
+    top: 1029px;
+    left: 52px;
     position: absolute;
     font-size: 25px;
   }
   .team-header3 {
-    top: 539px;
-    left: 78px;
+    top: 540px;
+    left: 57px;
     color: rgb(167, 135, 122);
     position: absolute;
     font-size: 25px;
@@ -536,8 +545,8 @@
     animation-timing-function: ease;
   }
   .team-header5 {
-    top: 1025px;
-    left: 69px;
+    top: 1026px;
+    left: 48px;
     color: rgb(167, 135, 122);
     position: absolute;
     font-size: 15px;
@@ -547,8 +556,9 @@
     line-height: 108px;
   }
   .team-header6 {
-    top: 596px;
-    left: 75px;
+    top: 597px;
+    left: 54px;
+    height: 35px;
     position: absolute;
     font-size: 15px;
   }
