--- a/team.css
+++ b/team.css
@@ -168,6 +168,7 @@
   height: 329px;
   position: absolute;
   object-fit: cover;
+  border-radius: 50%;
 }
  
 .team-image3 {
@@ -177,6 +178,7 @@
   height: 329px;
   position: absolute;
   object-fit: cover;
+  border-radius: 50%;
 }
  
 .team-link1 {
