--- a/index.css
+++ b/index.css
@@ -703,4 +703,8 @@
   .home-footer {
     overflow: hidden;
   }
+  
+body { margin: 0; padding: 0; }
+#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+
 }
