--- a/index.css
+++ b/index.css
@@ -523,6 +523,7 @@
     position: absolute;
   }
   .home-hero {
+    width: 100%;
     overflow: hidden;
     padding-top: var(--dl-space-space-threeunits);
     padding-left: var(--dl-space-space-oneandhalfunits);
@@ -533,8 +534,9 @@
     gap: var(--dl-space-space-unit);
   }
   .home-caption1 {
-    left: -72px;
-    bottom: -193px;
+    left: -14px;
+    width: 139px;
+    bottom: -191px;
     font-size: 10px;
     line-height: 24px;
   }
@@ -543,8 +545,8 @@
     left: 36px;
   }
   .home-header2 {
-    top: 139px;
-    right: -1px;
+    top: 138px;
+    left: 0px;
     font-size: 30px;
   }
   .home-description1 {
@@ -637,7 +639,7 @@
   }
 }
  
-@media(max-width: 393px) {
+@media(max-width: 390px) {
   .home-header1 {
     overflow: hidden;
   }
@@ -657,13 +659,9 @@
   .home-mobile-menu {
     padding: 16px;
   }
-  .home-hero {
-    overflow: hidden;
-  }
   .home-caption1 {
-    left: -66px;
+    left: -15px;
     bottom: -163px;
-    font-size: 10px;
   }
   .home-button {
     top: 282px;
